# bcalctracker

./: .gitignore  README.md  auth.py  backup_restore.py  bcalctracker.spec  config.py  data_loaders.py  database.py  pyproject.toml  requirements.txt  starttracker.py
.github/workflows/: build-windows-tracker.yml
datamenu/: ammomfg.csv  ammotype.csv  ammouse.csv  brassmfg.csv  bulletmfg.csv  calibers.csv  crimptype.csv  dragfunc.csv  firearmmfg.csv  firearmtype.csv  hullwadmfg.csv  opticsmfg.csv  optictype.csv  powdermfg.csv  primermfg.csv  primertype.csv  projectiletype.csv  rangeresults.csv  shotsize.csv
docs/: index.html  robots.txt  sitemap.xml
guiform/: ammo_form.py  config_form.py  constants.py  custom_dialogs.py  firearm_form.py  login.py  main_window.py  optic_form.py  range_form.py
